# langchain_ragoptim

./: .gitignore  Makefile  README.md  pyproject.toml
src/langchain_ragoptim/: __init__.py  trial_manager.py
src/langchain_ragoptim/dataset/: base_dataset.py  question_answering_dataset.py
src/langchain_ragoptim/rag/: modular_rag.py
src/langchain_ragoptim/rag/rag_modules/generation/: base_generation.py
src/langchain_ragoptim/rag/rag_modules/indexing/: base_indexing.py
src/langchain_ragoptim/rag/rag_modules/orchestration/: base_orchestration.py
src/langchain_ragoptim/rag/rag_modules/post_retrieval/: base_post_retrieval.py
src/langchain_ragoptim/rag/rag_modules/pre_retrieval/: base_pre_retrieval.py
src/langchain_ragoptim/rag/rag_modules/retrieval/: base_retrieval.py
src/langchain_ragoptim/trials/: base_trial.py  question_answering_trial.py
tests/src/: test_trial_manager.py
tests/src/dataset/: conftest.py  test_question_answering_dataset.py
